Fix slideshow overlaying menu on mobile

--- a/_assets/stylesheets/main.css.scss
+++ b/_assets/stylesheets/main.css.scss
@@ -873,7 +873,7 @@ ul.members-list {
     position: fixed;
     right: 8px;
     top: 8px;
-    z-index: 10;
+    z-index: 1000000;
   }
 
   .site-nav .menu-icon {
